working process of loading glyphs

--- a/templates/workspace.html
+++ b/templates/workspace.html
@@ -36,9 +36,12 @@ $var title: Workspace
 
 <div id="workspace" style="display: none;">
     <!-- Button trigger modal -->
-    <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#listglyphmodal">
-      Show Glyphs
-    </button>
+    <div id="btn-show-glyphs" style="display: none;">
+      <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#listglyphmodal">
+        Show Glyphs
+      </button>
+    </div>
+
     <div id="interpolations" style="display: none;">
 
     </div>
