--- a/templates/workspace.html
+++ b/templates/workspace.html
@@ -51,6 +51,23 @@ $var title: Workspace
     <div style="padding-top: 32px;"><button id="btn-add-axes" class="btn btn-large btn-success">Add axes</button></div>
 </div>
 
+<div id="empty-workspace" style="display: none;">
+  <!-- Button trigger modal -->
+    <div id="btn-show-glyphs" style="display: none;">
+      <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#listglyphmodal">
+        Show Glyphs
+      </button>
+    </div>
+
+    <div id="interpolations" style="display: none;">
+
+    </div>
+    <div class="editor">
+      
+    </div>
+    <div style="padding-top: 32px;"><button id="btn-add-axes" class="btn btn-large btn-success">Add axes</button></div>
+</div>
+
 <!-- Modal -->
 <div class="modal fade" id="listglyphmodal" tabindex="-1" role="dialog" aria-labelledby="glyphmodallabel" aria-hidden="true">
   <div class="modal-dialog">
