--- a/templates/workspace.html
+++ b/templates/workspace.html
@@ -36,7 +36,7 @@ $var title: Workspace
 
 <div id="workspace" style="display: none;">
     <!-- Button trigger modal -->
-    <div id="btn-show-glyphs" style="display: none;">
+    <div id="btn-show-glyphs" style="display: none; padding-bottom: 16px;">
       <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#listglyphmodal">
         Show Glyphs
       </button>
@@ -53,7 +53,7 @@ $var title: Workspace
 
 <div id="empty-workspace" style="display: none;">
   <!-- Button trigger modal -->
-    <div id="btn-show-glyphs" style="display: none;">
+    <div id="btn-show-glyphs" style="display: none; padding-bottom: 16px;">
       <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#listglyphmodal">
         Show Glyphs
       </button>
