--- a/templates/editor.html
+++ b/templates/editor.html
@@ -29,7 +29,7 @@ $var title: Editor
 </style>
 
 <!-- Button trigger modal -->
-<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#listglyphmodal">
+<button class="btn btn-primary btn-xs" data-toggle="modal" data-target="#listglyphmodal">
   Show Glyphs
 </button>
 
