--- a/templates/workspace.html
+++ b/templates/workspace.html
@@ -106,11 +106,9 @@ $var title: Workspace
 
     </div>
 
-    <div class="metapolation">
-        <h4>Metapolation</h4>
+    <div id="metapolation-buttons" style="display: none;">
         <a href="javascript:;" id="btn-master-from-instance" class="btn btn-xs btn-success">Create master</a>
         <a href="javascript:;" id="btn-instance" class="btn btn-xs btn-success">Create instance</a>
-        <canvas id="canvas-m"></canvas>
     </div>
 
     <div id="view">
