--- a/templates/workspace.html
+++ b/templates/workspace.html
@@ -151,6 +151,7 @@ window.MFPARSER = "$:websession.get('mfparser')";
 <script type="text/javascript" src="/static/js/3rdparty/jquery.filedrop.js"></script>
 <script type="text/javascript" src="/static/js/3rdparty/bootstrap-slider.js"></script>
 <script type="text/javascript" src="/static/js/3rdparty/jquery.ba-hashchange.min.js"></script>
+<script type="text/javascript" src="/static/js/3rdparty/jquery.storageapi.min.js"></script>
 
 <!-- <script type="text/javascript" src="/static/js/demodata.js"></script> -->
 <script type="text/javascript" src="/static/js/localparamform.js"></script>
