Initial start of metap-1.3 version

--- a/templates/workspace.html
+++ b/templates/workspace.html
@@ -2,6 +2,8 @@ $def with ()
 
 $var title: Workspace
 <link rel="stylesheet" type="text/css" href="/static/css/slider.css"/>
+<link rel="stylesheet" type="text/css" href="/static/nprogress/css/nprogress.css" />
+
 <style>
     .dropzone {
         padding: 32px;
@@ -153,7 +155,8 @@ window.MFPARSER = "$:websession.get('mfparser')";
 <script type="text/javascript" src="/static/js/3rdparty/jquery.ba-hashchange.min.js"></script>
 <script type="text/javascript" src="/static/js/3rdparty/jquery.storageapi.min.js"></script>
 
-<!-- <script type="text/javascript" src="/static/js/demodata.js"></script> -->
+<script type="text/javascript" src="/static/nprogress/js/nprogress.js"></script>
+<script type="text/javascript" src="/static/js/dropzone.js"></script>
 <script type="text/javascript" src="/static/js/localparamform.js"></script>
 <script type="text/javascript" src="/static/js/glyph.js"></script>
 <script type="text/javascript" src="/static/js/view.js"></script>
