Dropzone moved to View class

--- a/templates/workspace.html
+++ b/templates/workspace.html
@@ -21,6 +21,10 @@ $var title: Workspace
         padding-top: 24px;
     }
 
+    .axis {
+      min-height: 32px;
+    }
+
     input.span2 {
         width: 500px;
     }
