make hidden fields inside of axis

--- a/templates/workspace.html
+++ b/templates/workspace.html
@@ -17,6 +17,10 @@ $var title: Workspace
         content: "Drop archive with UFO here";
     }
 
+    .dragging * {
+      visibility: hidden;
+    }
+
     .editor-axes {
         padding-top: 24px;
     }
