put links for mfparser modes

--- a/templates/base.html
+++ b/templates/base.html
@@ -112,6 +112,22 @@ right {
             $if webctx.get('project') and webctx.project:
               <li><a href="/specimen/$webctx.project.projectname/">Specimen</a></li>
           </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+              $if not websession.get('mfparser') or websession.mfparser == 'pen':
+                <li class="active">
+                  <a href="javascript:;">pen mode</a>
+                </li>
+              $else:
+                <li><a href="javascript:;" onclick="setmfparser('pen')">pen mode</a></li>
+
+              $if websession.get('mfparser') == 'controlpoints':
+                <li class="active">
+                  <a href="javascript:;">controlpoints mode</a>
+                </li>
+              $else:
+                <li><a href="javascript:;" onclick="setmfparser('controlpoints')">controlpoints mode</a></li>
+            </ul>
         </div><!--/.nav-collapse -->
       </div>
     </div>
@@ -119,4 +135,13 @@ right {
     $:page
     </div>
 </body>
+
+<script>
+  function setmfparser(mode) {
+    $$.post('/mfparser-switch/' + mode + '/')
+    .done(function(){
+      window.location.reload();
+    })
+  }
+</script>
 </html>
