--- a/templates/opentype_js.html
+++ b/templates/opentype_js.html
@@ -3,9 +3,15 @@ $def with ()
 $var title: opentype
 <link rel="stylesheet" type="text/css" href="/static/css/slider.css"/>
 
+<style>
+    .slider {
+        margin-bottom: 48px;
+    }
+</style>
+
 <div class="row">
 
-    <div class="col-xs-3">
+    <div class="col-xs-3 slider">
         <input id="slider" type="text" value="" data-slider-min="0" data-slider-max="1" data-slider-step="0.01" data-slider-value="0.2" data-slider-orientation="horizontal" data-slider-selection="after" data-slider-tooltip="show" data-slider-handle="round" style="">
 
         <input id="sliderFontsize" type="text" value="" data-slider-min="72" data-slider-max="250" data-slider-step="4" data-slider-value="72" data-slider-orientation="horizontal" data-slider-selection="after" data-slider-tooltip="show" data-slider-handle="round" style="">
