--- a/templates/opentype_js.html
+++ b/templates/opentype_js.html
@@ -5,38 +5,82 @@
     <title>Document</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="/static/css/slider.css"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/demo.css"/>
+    <link href='http://fonts.googleapis.com/css?family=Roboto:100italic,500,300,700,400' rel='stylesheet' type='text/css'>
 
-    <style>
-        .slider {
-            margin-bottom: 48px;
-        }
-
-        .container-fluid {
-            margin-top: 200px;
-            width: 100%;
-            text-align: center;
-        }
-    </style>
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 
 <body>
-    <div class="container-fluid">
+   <!--   <div class="container-fluid">
         <div class="row">
-            <div class="col-xs-3 offset1 slider">
-                <div>
-                    <input id="slider" type="text" value="" data-slider-min="0" data-slider-max="1" data-slider-step="0.01" data-slider-value="0.2" data-slider-orientation="horizontal" data-slider-selection="after" data-slider-tooltip="show" data-slider-handle="round" style="">
-                </div>
-                <div>
-                    <input id="sliderFontsize" type="text" value="" data-slider-min="72" data-slider-max="250" data-slider-step="4" data-slider-value="172" data-slider-orientation="horizontal" data-slider-selection="after" data-slider-tooltip="show" data-slider-handle="round" style="">
-                </div>
-            </div>
-
-            <div id="glyphs" class="col-xs-8">
+            <div id="glyphs">
 
             </div>
+        </div>
 
+        <div class="row">
+                    </div>
+    </div> -->
+<div id="wrap">
+    <div class="masthead clearfix">
+            <div class="inner">
+              <h3 class="col-md-2 masthead-brand">
+                <span style="font-family: 'Roboto', sans-serif; font-weight: 700;">meta</span><!---
+                --><span style="font-family: 'Roboto', sans-serif; font-weight: 500;">po</span><!---
+                --><span style="font-family: 'Roboto', sans-serif; font-weight: 300;">lator</span>
+            </h3>
+              <ul class="col-md-5 col-md-offset-2 feature-nav">
+                <li>What do you want to try?</li>
+                <li>
+                <div class="btn-group">
+                  <button type="button" class="btn btn-default dropdown-toggle btn-black" data-toggle="dropdown">
+                    changing x-height <span class="caret"></span>
+                  </button>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><a href="#">changing x-height</a></li>
+                    <li><a href="#">changing x-height</a></li>
+                    <li><a href="#">changing x-height</a></li>
+                  </ul>
+                </div></li>
+              </ul>
+              <ul class="col-md-2 nav masthead-nav">
+                <li><span class="glyphicon glyphicon-circle-arrow-down"></span></li>
+                <li><span class="glyphicon glyphicon-user"></span></li>
+                <li><span class="glyphicon glyphicon-globe"></span></li>
+                <li><span class="glyphicon glyphicon-send"></span></li>
+              </ul>
+            </div>
+          </div>
+    <div class="container-fluid">
+        <div class="container">
+            <div class="row">
+                <div id="glyphs">
+                </div>
+            </div>
+        <div class="row">
+                <div class="row">
+                    <div class="col-md-2">
+                        <span>x-height</span>
+                    </div>
+                    <div class="col-md-7">
+                        <input id="slider" type="text" value="" data-slider-min="0" data-slider-max="1" data-slider-step="0.01" data-slider-value="0.2" data-slider-orientation="horizontal" data-slider-selection="after" data-slider-tooltip="show" data-slider-handle="round" style="width:350px;">
+                    </div>
+                    <div class="col-md-2">
+                        <span id="sliderValue">0.2</span>
+                    </div>
+                </div>
+<!--                 <div class="row">
+                    <input id="sliderFontsize" type="text" value="" data-slider-min="72" data-slider-max="250" data-slider-step="4" data-slider-value="172" data-slider-orientation="horizontal" data-slider-selection="after" data-slider-tooltip="show" data-slider-handle="round" style="width:350px;">
+                </div> -->
+            </div>
         </div>
     </div>
+</div>
 </body>
 
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -49,10 +93,10 @@
 <script>
 
 function formatter(value) {
-    return value.toFixed(2);
+    return value.toFixed(1);
 }
 
-$$(document).ready(function(){
+$(document).ready(function(){
 
     opentype.load('/static/demo/Exo-Regular.otf', function (err, font) {
         if (err) {
@@ -70,13 +114,14 @@ $$(document).ready(function(){
             });
         }
 
-        $$('#slider').slider({formatter: formatter}).on('slide', function(e){
+        $('#slider').slider({formatter: formatter}).on('slide', function(e){
             instances[0].interpolationValue = e.value;
+            $('#sliderValue').text(e.value.toFixed(1));
             funStart();
         });
 
-        $$('#sliderFontsize').slider({formatter: formatter}).on('slide', function(e){
-            $$(instances).each(function(idx, instance){
+        $('#sliderFontsize').slider({formatter: formatter}).on('slide', function(e){
+            $(instances).each(function(idx, instance){
                 instance.fontSize = e.value
             });
             funStart();
