--- a/templates/opentype_js.html
+++ b/templates/opentype_js.html
@@ -24,10 +24,13 @@
         <div class="row">
             <div class="col-xs-3 offset1 slider">
                 <div>
-                    <input id="slider" type="text" value="" data-slider-min="0" data-slider-max="1" data-slider-step="0.01" data-slider-value="0.2" data-slider-orientation="horizontal" data-slider-selection="after" data-slider-tooltip="show" data-slider-handle="round" style="">
+                    <input id="sliderAB" type="text" value="" data-slider-min="0" data-slider-max="1" data-slider-step="0.01" data-slider-value="0.2" data-slider-orientation="horizontal" data-slider-selection="after" data-slider-tooltip="show" data-slider-handle="round" style="">
                 </div>
                 <div>
-                    <input id="sliderFontsize" type="text" value="" data-slider-min="72" data-slider-max="250" data-slider-step="4" data-slider-value="172" data-slider-orientation="horizontal" data-slider-selection="after" data-slider-tooltip="show" data-slider-handle="round" style="">
+                    <input id="sliderCD" type="text" value="" data-slider-min="0" data-slider-max="1" data-slider-step="0.01" data-slider-value="0.2" data-slider-orientation="horizontal" data-slider-selection="after" data-slider-tooltip="show" data-slider-handle="round" style="">
+                </div>
+                <div>
+                    <input id="sliderFontsize" type="text" value="" data-slider-min="72" data-slider-max="250" data-slider-step="4" data-slider-value="124" data-slider-orientation="horizontal" data-slider-selection="after" data-slider-tooltip="show" data-slider-handle="round" style="">
                 </div>
             </div>
 
@@ -48,41 +51,62 @@
 
 <script>
 
+
 function formatter(value) {
     return value.toFixed(2);
 }
 
+var fontsLoaded = false;
+
 $$(document).ready(function(){
 
-    opentype.load('/static/demo/Exo-Regular.otf', function (err, font) {
+    var fonts = [
+        '/static/demo/fonts/Roboto-Regular.otf',
+        '/static/demo/fonts/Roboto-Regular-space.otf',
+        '/static/demo/fonts/Roboto-Regular-x-low.otf',
+        '/static/demo/fonts/Roboto-Regular-x-high.otf'
+    ];
+
+    var instances = Instances(fonts.length);
+
+    for (var i = 0; i < fonts.length; i++) {
+        opentype.load(fonts[i], onload.bind(instances, i));
+    }
+
+    function onload(index, err, font) {
         if (err) {
-             alert('Font could not be loaded: ' + err);
+            instances.failed = true
         } else {
-            instances.push(getFontInstance(font));
-
-            opentype.load('/static/demo/Exo-Medium.otf', function (err, font) {
-                if (err) {
-                     alert('Font could not be loaded: ' + err);
-                } else {
-                    instances.push(getFontInstance(font));
-                    funStart();
-                }
-            });
+            instances.add(index, font);
         }
+    }
 
-        $$('#slider').slider({formatter: formatter}).on('slide', function(e){
-            instances[0].interpolationValue = e.value;
-            funStart();
-        });
+    function startpoint() {
+        if (instances.failed) {return;}
+        if (!instances.loaded()){setTimeout(startpoint, 0); return;};
+        instances.interpolate();
+    }
 
-        $$('#sliderFontsize').slider({formatter: formatter}).on('slide', function(e){
-            $$(instances).each(function(idx, instance){
-                instance.fontSize = e.value
-            });
-            funStart();
+    setTimeout(startpoint, 0);
+
+    $$('#sliderAB').slider({formatter: formatter}).on('slide', function(e){
+        instances.interpolationValueAB = e.value;
+        instances.interpolate();
+    });
+
+    $$('#sliderCD').slider({formatter: formatter}).on('slide', function(e){
+        instances.interpolationValueCD = e.value;
+        instances.interpolate();
+    });
+
+    $$('#sliderFontsize').slider({formatter: formatter}).on('slide', function(e){
+        $$(instances).each(function(idx, instance){
+            instance.fontSize = e.value
         });
+        instances.interpolate();
     });
 
 });
+
 </script>
 </html>
